--- a/Esercitazioni_2/4_landing_page/src/style.scss
+++ b/Esercitazioni_2/4_landing_page/src/style.scss
@@ -99,7 +99,7 @@ nav {
         /* margin-bottom: 40px; */
         padding: 40px;
         border-radius: 16px;
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;        
 
         h2 {
             font-size: 24px;
@@ -111,6 +111,22 @@ nav {
     }
 }
 
+// Pulse animation
+@keyframes pulse-animation {
+    0% {
+        box-shadow: rgba(149, 157, 165, .5) 0px 8px 24px; 
+      }
+      100% {
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    }
+}
+
+.pulse {
+    animation-name: pulse-animation;
+    animation-duration: 1000ms;
+}
+
+// Media queries
 @media screen and (max-width: 1200px) {
     nav {
         .menu {
