--- a/Esercitazioni_2/4_landing_page/src/style.scss
+++ b/Esercitazioni_2/4_landing_page/src/style.scss
@@ -22,7 +22,8 @@ body {
     }
 
     p,
-    a {
+    a,
+    label {
 
         font-family: 'Inter', sans-serif;
         font-weight: 400;
@@ -99,7 +100,7 @@ nav {
         border-radius: 16px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         transition: 100ms ease-in-out;
-        
+
         &:hover {
             transform: scale(1.01);
         }
@@ -114,12 +115,77 @@ nav {
     }
 }
 
+.form-section {
+    margin: 80px 0px;
+
+    .form-title {
+        text-align: center;
+    }
+
+    form {
+        max-width: 400px;
+        margin: auto;
+
+        label {
+            text-align: left;
+            font-size: 0.8rem;
+
+            &::after {
+                content: '*';
+                color: red;
+            }
+        }
+
+        input[type=text] {
+            width: 100%;
+            padding: 8px;
+            border: 1px solid rgb(192, 192, 192);
+            border-radius: 4px;
+            margin: 0 0 16px 0;
+        }
+
+        button {
+            cursor: pointer;
+            color: white;
+            background-color: $dark-color;
+            width: 100%;
+            padding: 8px 0px;
+            border: 2px solid $dark-color;
+            border-radius: 4px;
+            margin: 16px 0px 0px 0px;
+            font-family: 'Inter', sans-serif;
+            font-weight: 800;
+            transition: 0.2s ease-in-out;
+
+            &:hover {
+                background-color: white;
+                color: $dark-color;
+            }
+        }
+    }
+}
+
+footer {
+    /* position: absolute;
+    bottom: 0; */
+    width: 100%;
+    text-align: center;
+    background: linear-gradient(90deg, rgba(9, 9, 121, 0.5) 0%, rgba(0, 212, 255, 0.5) 100%);
+    margin: 0;
+    padding: 16px 40px;
+
+    p {
+        color: white;
+    }
+}
+
 // Pulse animation
 @keyframes pulse-animation {
     0% {
-        box-shadow: rgba(149, 157, 165, .5) 0px 8px 24px; 
-      }
-      100% {
+        box-shadow: rgba(149, 157, 165, .5) 0px 8px 24px;
+    }
+
+    100% {
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     }
 }
@@ -156,5 +222,15 @@ nav {
             gap: 40px;
             grid-template-columns: 1fr;
         }
+    }
+
+    .form-section {
+        form {
+            max-width: 100%
+        }
+    }
+
+    footer {
+        position: static;
     }
 }
