--- a/Esercitazioni_2/4_landing_page/src/style.scss
+++ b/Esercitazioni_2/4_landing_page/src/style.scss
@@ -188,7 +188,9 @@ nav {
             }
 
             .gg-mail {
-                margin-right: 8px;
+                margin-right: 4px;
+                margin-top: 1px;
+                --ggs: 0.7;
             }
         }
     }
