--- a/Esercitazioni_2/4_landing_page/src/style.scss
+++ b/Esercitazioni_2/4_landing_page/src/style.scss
@@ -49,6 +49,7 @@ main {
 
 nav {
     margin: 0;
+    background-color: white;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     padding: 16px 40px;
 
@@ -134,6 +135,37 @@ nav {
 
         img {
             padding-left: 48px;
+        }
+
+        .progress {
+            background-color: rgb(243, 243, 243);
+            border-radius: 20px;
+            margin: 24px 0 0 0;
+        }
+        
+        .progress-bar-1,
+        .progress-bar-2,
+        .progress-bar-3 {
+            width: 50%;
+            height: 8px;
+            background-color: rgb(49, 49, 49);
+            border-radius: 20px;
+            animation-duration: 2000ms;
+        }
+
+        .progress-bar-1 {
+            width: 80%;
+            animation-name: progress-filling-1;
+        }
+
+        .progress-bar-2 {
+            width: 100%;
+            animation-name: progress-filling-2;
+        }
+
+        .progress-bar-3 {
+            width: 20%;
+            animation-name: progress-filling-3;
         }
     }
 }
@@ -225,14 +257,58 @@ footer {
     animation-duration: 1000ms;
 }
 
+// Progress bar animation
+@keyframes progress-filling-1 {
+    0% {
+        width: 0%;
+    }
+
+    100% {
+        width: 80%;
+    }
+}
+
+@keyframes progress-filling-2 {
+    0% {
+        width: 0%;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
+@keyframes progress-filling-3 {
+    0% {
+        width: 0%;
+    }
+
+    100% {
+        width: 20%;
+    }
+}
+
 // Media queries
 @media screen and (max-width: 1200px) {
     nav {
+        position: sticky;
+        top: 0;
+
         .menu {
             max-width: 92%;
+            display: block;
 
             .menu-list {
                 justify-content: space-between;
+
+                .menu-item {
+                    margin-right: 0px;
+                }
+            }
+
+            button {
+                margin: 16px 0 0 0;
+                width: 100%;
             }
         }
     }
