--- a/Esercitazioni_2/4_landing_page/src/style.scss
+++ b/Esercitazioni_2/4_landing_page/src/style.scss
@@ -153,7 +153,8 @@ nav {
             /* animation-duration: 2000ms; */
         }
 
-        /* .progress-bar-1 {
+        /*
+        .progress-bar-1 {
             animation-name: progress-filling-1;
         }
 
@@ -163,7 +164,8 @@ nav {
 
         .progress-bar-3 {
             animation-name: progress-filling-3;
-        } */
+        }
+        */
     }
 }
 
@@ -255,7 +257,8 @@ footer {
 }
 
 // Progress bar animation
-/* @keyframes progress-filling-1 {
+/*
+@keyframes progress-filling-1 {
     0% {
         width: 0%;
     }
@@ -283,7 +286,8 @@ footer {
     100% {
         width: var(--bar-filling-3);
     }
-} */
+}
+*/
 
 // Media queries
 @media screen and (max-width: 1200px) {
